<resources>
    <string name="app_name">POSIZV1920</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_here"><a href="https://www.ieszaidinvergeles.org/">Register Here.</a></string>
    <string name="logo_brand">Logo IZV</string>
    <string name="btLogin">Login</string>
    <string name="icoTwitter">Twitter</string>
    <string name="icoInstagram">Instagram</string>
    <string name="icoFacebook">Facebook</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="title_activity_home">Home</string>
    <string name="nav_header_title">Nombre empleado: </string>
    <string name="nav_header_subtitle">Número de empleado: </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_authors">+Info</string>
    <string name="action_log_out">Log Out!</string>

    <string name="menu_productos">Productos</string>
    <string name="menu_last_order">Última comanda</string>
    <string name="menu_facturado">Facturado</string>
    <string name="menu_report">Reportar un problema</string>
    <string name="menu_vat">Impuestos &amp; Descuentos</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="messages_title">URL SERVER CONFIGURATION</string>
    <string name="url_title">URL ADDRESS</string>
    <string name="title_activity_product_acticvity">ProductActicvity</string>
    <string name="title_activity_product">Product</string>

    <string name="cat_drinks">Drinks</string>
    <string name="cat_salads">Salads</string>
    <string name="cat_frisbees">Frisbees</string>
    <string name="cat_rolls">Rolls</string>
    <string name="cat_kebabs">Kebabs</string>
    <string name="cat_burgers">Burgers</string>
    <string name="cat_temptations">Temptations</string>

    <string name="nav_header_cat_title">Nombre Categoria</string>
    <string name="nav_header_cat_subtitle">Nº Productos:</string>
    <string name="categories">Categories</string>

    <string name="dialogTitle">¿Desea imprimir la factura?</string>
    <string name="dialogMessage">Se imprimirá una lista con todas las comandas realizadas</string>
    <string name="dialogYes">Sí</string>
    <string name="dialogNo">No</string>

</resources>

