<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_last_order" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_facturado" />
    </group>

    <item android:title="Administración">
        <menu>
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_report" />
            <item
                android:id="@+id/menuAdd"
                android:icon="@drawable/ic_menu_user"
                android:title="@string/menu_vat" />
            <item
                android:id="@+id/menuHelp"
                android:icon="@drawable/ic_menu_manage"
                android:title="Ajustes" />
            <item
                android:id="@+id/menuLogOut"
                android:icon="@drawable/ic_menu_logout"
                android:title="Cerrar Sesion" />
        </menu>
    </item>
</menu>